# guiderails

./: =6.0.0  CHANGELOG.md  IMPLEMENTATION.md  LICENSE  PYPI_PUBLICATION.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml  validate-tutorials.yml
examples/: advanced-features.md  file-generation-and-capture.md  getting-started.md  tutorial-page.html  verbosity-demo.md
src/guiderails/: __init__.py  cli.py  config.py  executor.py  parser.py
src/guiderails/commands/: __init__.py  exec_tutorial.py  init.py  render.py  workflow.py
templates/: tutorial.md.j2  workflow.yml.j2
tests/: __init__.py  test_config.py  test_executor.py  test_parser.py
tutorials/: getting-started.yaml
