[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guiderails"
version = "0.1.0"
description = "Tutorials-as-Code: Execute and validate Markdown tutorials"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "GuideRails Contributors"}
]
keywords = ["tutorial", "documentation", "testing", "ci", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "markdown>=3.4.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/srbouffard/guiderails"
Documentation = "https://github.com/srbouffard/guiderails#readme"
Repository = "https://github.com/srbouffard/guiderails"
Issues = "https://github.com/srbouffard/guiderails/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
guiderails = "guiderails.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/guiderails"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
